Local server set up with one API
API needs functionality to send geometry field
